# SmartWorkcell

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  aruco_detection.py  aruco_detection.py.origin  calibration.py  camera_intrinsic.yaml  camera_test.ipynb  dinov2_test.ipynb  gdino_nanosam_test.ipynb  go2pose.py  mac_aruco_detection.py  move2goal.py  nanosam_test.ipynb  package.xml  planning.py  pyproject.toml  realsense.py  realsense_utils.py  requirements.txt  setup.py  simple_moveit.py  test_pose.yml  utils.py
action/: MoveJoint2ObjPose.action
config/: calibrated_marker.yaml  cam2marker.yaml  cam2markers.yaml  cam2robot.yaml  cam_calibration.yaml  camera_calibration.npz  camera_calibration.yaml  camera_calibration_params.yaml  camera_to_markers.yaml  d435_origin.yaml  mac_calibration.yaml  marker2robot.yaml  marker_robot_translation_matrix.yaml  markers_to_robot.yaml  object_detect_params.yaml  object_poses.yml  realsense_calibration_chessboard6x4-40mm.yaml  realsense_origin.yaml  robot2marker.yaml  robot2obj.yaml  test_marker_pose.yaml
launch/: camera_calibration_node.launch  move_arm_node.launch  object_detect_node.launch  rs_d435_node.launch  setup_simulation.launch  smartworkcell_test.launch
src/: ArucoDetection.py  ArucoDetection.py.orig  ArucoDetection_speedup.py  CameraRobotCalibration.py  MoveArmNode.py  ObjectDetectNode.py  RealSenseCamera.py  aruco_detection.py  aruco_detection_speedup.py  calibration.py  calibration_cam_robot.py  cam_calibration.py  cam_calibration_speedup.py  cam_robot_translation_matrix.yaml  collect_images.py  img_aruco_detection_speedup.py  mac_ArucoDetection.py  mac_aruco_detection.py  mac_cam_robo_calibration.py  move_joint_2_obj_pose_server.py  realsense_cam_robot_calibration.py  realsense_test.ipynb  rigid_transformation_turorial.py  robot_cam_calibration.py  robot_cam_translation_matrix.yaml  rs_aruco_detection.py  test.py  translate_pose_cam_robot.py  webcam.py
src/SmartWorkcell/: ArucoDetection.py  calibration_utils.py  realsense_utils.py  vlm_utils.py
src/moveit/: go2pose.py
src/pysmartworkcell/: ArucoDetection.py  calibration_utils.py  realsense_utils.py  vlm_utils.py
src/vlms/: gdino_nanosam_test.ipynb  gdino_test.ipynb  nanosam_test.ipynb  object_detection.ipynb
src/voice_command/: voice.py
srv/: DetectObjectPose.srv
test/: get_object_pose.ipynb
