<package format="2">
    <name>smartworkcell</name>
    <version>0.1.0</version>
    <description>Object detection with VLMs</description>
    <maintainer email="tangptnhan@gmail.com">TANG PHU THIEN NHAN</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>
    
    <build_depend>geometry_msgs</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>cv_bridge</exec_depend>
</package>
