<package format="2">
    <name>smartworkcell</name>
    <version>0.1.0</version>
    <description>Object detection with VLMs</description>
    <maintainer email="tangptnhan@gmail.com">TANG PHU THIEN NHAN</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>

    <exec_depend>cv_bridge</exec_depend>

    <depend>rospy</depend>
    <depend>actionlib</depend>
    <depend>actionlib_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    
</package>
