[project]
name = "SmartWorkcell"
version = "1.0"
authors = [
  { name="Nyan", email="tangptnhan@gmail.com" },
]
description = "Picking & Place using VLMs."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { text = "MIT" }
[project.urls]
Homepage = "https://github.com/norman-nhan/SmartWorkcell"
Issues = "https://github.com/norman-nhan/SmartWorkcell"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"